--- a/01-config.yaml
+++ b/01-config.yaml
@@ -76,6 +76,41 @@ spec:
       - name: repo
         type: git
   steps:
+
+    - name: buildah
+      image: quay.io/buildah/stable:v1.23.3
+      securityContext:
+        privileged: true
+      env:
+        - name: DOCKER_CONFIG
+          value: /tekton/home/.docker
+      command:
+        - sh
+        - -c
+        - buildah build --layers -f /workspace/repo/Dockerfile -t russtanevich/private:b001 /workspace/repo/;
+          buildah push russtanevich/private:b001;
+
+    - name: buildkit
+      image: moby/buildkit:v0.10.3
+      securityContext:
+        privileged: true
+      env:
+        # needs resolve ownership of mounted git and docker config etc
+        # - name: BUILDKITD_FLAGS
+        #   value: --oci-worker-no-process-sandbox
+        - name: DOCKER_CONFIG
+          value: /tekton/home/.docker
+      command:
+        # https://github.com/moby/buildkit#daemonless
+        - buildctl-daemonless.sh
+        - build
+        - --frontend=dockerfile.v0
+        - --local=context=/workspace/repo
+        - --local=dockerfile=/workspace/repo
+        - --output=type=image,"name=docker.io/russtanevich/private:d001,docker.io/russtanevich/private:latest",push=true
+        - --export-cache=type=inline
+        - --import-cache=type=registry,ref=docker.io/russtanevich/private:latest
+
     - name: kaniko-ensure-base-image-pulled
       image: gcr.io/kaniko-project/warmer:v1.8.1
       env:
@@ -103,27 +138,6 @@ spec:
         - --cache-repo=russtanevich/private
         - --cache=true
         - --cache-dir=/workspace/cache
-
-    - name: buildkit
-      image: moby/buildkit:v0.10.3
-      securityContext:
-        privileged: true
-      env:
-        # needs resolve ownership of mounted git and docker config etc
-        # - name: BUILDKITD_FLAGS
-        #   value: --oci-worker-no-process-sandbox
-        - name: DOCKER_CONFIG
-          value: /tekton/home/.docker
-      command:
-        # https://github.com/moby/buildkit#daemonless
-        - buildctl-daemonless.sh
-        - build
-        - --frontend=dockerfile.v0
-        - --local=context=/workspace/repo
-        - --local=dockerfile=/workspace/repo
-        - --output=type=image,"name=docker.io/russtanevich/private:d001,docker.io/russtanevich/private:latest",push=true
-        - --export-cache=type=inline
-        - --import-cache=type=registry,ref=docker.io/russtanevich/private
 
   workspaces:
     - name: cached-dir
