--- a/03-go.yaml
+++ b/03-go.yaml
@@ -39,17 +39,17 @@ spec:
       - name: revision
         value: develop
 
-    - name: buildah
-      taskRef:
-        name: buildah
-      runAfter:
-      - fetch-repository
-      workspaces:
-      - name: source
-        workspace: shared-workspace
-      params:
-      - name: IMAGE_SHA
-        value: $(context.pipelineRun.name)
+    # - name: buildah
+    #   taskRef:
+    #     name: buildah
+    #   runAfter:
+    #   - fetch-repository
+    #   workspaces:
+    #   - name: source
+    #     workspace: shared-workspace
+    #   params:
+    #   - name: IMAGE_SHA
+    #     value: $(context.pipelineRun.name)
 
     - name: buildkit
       taskRef:
@@ -100,7 +100,7 @@ spec:
   - name: source
   steps:
   - name: build
-    image: moby/buildkit:v0.10.3-rootless
+    image: moby/buildkit:nightly-rootless # v0.10.3-rootless
     workingDir: $(workspaces.source.path)
     env:
     - name: HOME
@@ -109,13 +109,25 @@ spec:
       value: /tekton/home/.docker
     - name: BUILDKITD_FLAGS
       value: --oci-worker-no-process-sandbox
+    
+    - name: AWS_ACCESS_KEY_ID
+      value: minio
+    - name: AWS_SECRET_ACCESS_KEY
+      value: minio123
+    - name: AWS_REGION
+      value: us-east-1
     command:
     - buildctl-daemonless.sh
     - build
     - --progress=plain
     - --frontend=dockerfile.v0 # There are alternative
-    - --local=context=.
-    - --local=dockerfile=.
-    - --output=type=image,name=docker.io/russtanevich/builds-demo-buildkit-inline-registry-cache:$(params.IMAGE_SHA),push=true
-    - --export-cache=type=registry,mode=max,ref=docker.io/russtanevich/buildkit-cache
-    - --import-cache=type=registry,ref=docker.io/russtanevich/buildkit-cache
+    - --local
+    - context=.
+    - --local
+    - dockerfile=.
+    - --output
+    - type=image,name=docker.io/russtanevich/builds-demo-buildkit-inline-registry-cache:$(params.IMAGE_SHA),push=true
+    - --export-cache
+    - type=s3,mode=max,endpoint_url=http://minio.minio:9000,use_path_style=true,bucket=buildkit-cache,name=demo-project
+    - --import-cache
+    - type=s3,endpoint_url=http://minio.minio:9000,use_path_style=true,bucket=buildkit-cache,name=demo-project
