--- a/deploy/04-pipelinerun.yaml
+++ b/deploy/04-pipelinerun.yaml
@@ -157,6 +157,7 @@ spec:
   # https://github.com/GoogleContainerTools/kaniko/issues/875
   - name: build
     image: gcr.io/kaniko-project/executor:v1.8.1
+    workingDir: $(workspaces.source.path)
     env:
     - name: HOME
       value: /tekton/home/
