--- a/deploy/04-pipelinerun.yaml
+++ b/deploy/04-pipelinerun.yaml
@@ -63,6 +63,41 @@ spec:
       - name: IMAGE_SHA
         value: $(context.pipelineRun.name)
 
+---
+apiVersion: tekton.dev/v1beta1
+kind: PipelineRun
+metadata:
+  name: ci-pipeline-kaniko-only
+spec:
+  serviceAccountName: build-bot
+  workspaces:
+  - name: shared-workspace
+    volumeClaimTemplate:
+      spec:
+        accessModes:
+        - ReadWriteOnce
+        resources:
+          requests:
+            storage: 50Mi
+  pipelineSpec:
+
+    workspaces:
+    - name: shared-workspace
+
+    tasks:
+
+    - name: fetch-repository
+      taskRef:
+        name: git-clone
+      workspaces:
+      - name: output
+        workspace: shared-workspace
+      params:
+      - name: url
+        value: https://github.com/rstanevich/builds-demo
+      - name: revision
+        value: develop
+
     - name: kaniko
       taskRef:
         name: kaniko
@@ -145,32 +180,32 @@ spec:
 
 
 # Issue with running as non root
-# ---
-# apiVersion: tekton.dev/v1beta1
-# kind: Task
-# metadata:
-#   name: kaniko
-# spec:
-#   params:
-#   - name: IMAGE_SHA
-#   workspaces:
-#   - name: source
-#   steps:
-#   # https://github.com/GoogleContainerTools/kaniko/issues/875
-#   - name: build
-#     image: gcr.io/kaniko-project/executor:v1.8.1
-#     workingDir: $(workspaces.source.path)
-#     env:
-#     - name: DOCKER_CONFIG
-#       value: /tekton/home/.docker
-#     command:
-#       - /kaniko/executor
-#       - --context=.
-#       - --dockerfile=Dockerfile.multi
-#       # https://github.com/GoogleContainerTools/kaniko/issues/524#issuecomment-455780091
-#       - --destination=russtanevich/builds-demo:kaniko-$(params.IMAGE_SHA)
-#       # https://github.com/GoogleContainerTools/kaniko#caching
-#       - --cache-repo=russtanevich/kaniko-cache
-#       - --cache=true
-#     securityContext:
-#       runAsUser: 0
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: kaniko
+spec:
+  params:
+  - name: IMAGE_SHA
+  workspaces:
+  - name: source
+  steps:
+  # https://github.com/GoogleContainerTools/kaniko/issues/875
+  - name: build
+    image: gcr.io/kaniko-project/executor:v1.8.1
+    workingDir: $(workspaces.source.path)
+    env:
+    - name: DOCKER_CONFIG
+      value: /tekton/home/.docker
+    command:
+      - /kaniko/executor
+      - --context=.
+      - --dockerfile=multi/Dockerfile
+      # https://github.com/GoogleContainerTools/kaniko/issues/524#issuecomment-455780091
+      - --destination=russtanevich/builds-demo:kaniko-$(params.IMAGE_SHA)
+      # https://github.com/GoogleContainerTools/kaniko#caching
+      - --cache-repo=russtanevich/kaniko-cache
+      - --cache=true
+    securityContext:
+      runAsUser: 0
