--- a/deploy/04-pipelinerun.yaml
+++ b/deploy/04-pipelinerun.yaml
@@ -83,7 +83,7 @@ spec:
     - name: DOCKER_CONFIG
       value: /tekton/home/.docker
     script: |
-      buildah build -f multi/Dockerfile -t russtanevich/builds-demo:buildah-$(params.IMAGE_SHA) .
+      buildah build -f Dockerfile -t russtanevich/builds-demo:buildah-$(params.IMAGE_SHA) .
       buildah push russtanevich/builds-demo:buildah-$(params.IMAGE_SHA)
     securityContext:
       privileged: true
@@ -123,7 +123,7 @@ spec:
     - --local
     - context=.
     - --local
-    - dockerfile=multi
+    - dockerfile=.
     - --output
     - type=image,name=docker.io/russtanevich/builds-demo:buildkit-$(params.IMAGE_SHA),push=true
     - --export-cache
@@ -170,7 +170,7 @@ spec:
     command:
       - /kaniko/executor
       - --context=/workspace/repo
-      - --dockerfile=multi/Dockerfile
+      - --dockerfile=Dockerfile
       # https://github.com/GoogleContainerTools/kaniko/issues/524#issuecomment-455780091
       - --destination=russtanevich/builds-demo:kaniko-$(params.IMAGE_SHA)
       # https://github.com/GoogleContainerTools/kaniko#caching
